# chessrs

./: Cargo.toml  LICENSE  README.md  index.html
css/: main.css
src/: board.rs  lib.rs  minimax.rs
